# piklet_bot

./: .gitignore  CMakeLists.txt  package.xml  readme.rst  setup.cfg  setup.py
config/: gz_bridge.yaml  robot_config.yaml
launch/: display.launch.py  gazebo.launch.py  sim.launch.py  spawn_piklet.launch.py  view_gazebo.launch.py  view_model.launch.py
piklet_bot/: wheel_joint_publisher.py
piklet_description/: __init__.py
resource/: piklet_bot  piklet_description
rviz/: display.rviz  display_gazebo.rviz
test/: test_view_robot.py
urdf/: arm-3-dof.xacro  arm-3.xacro  arm.xacro  body.xacro  caster.xacro  depth_camera.xacro  finger-2-gripper.xacro  gazebo.xacro  lidar.xacro  materials.xacro  piklet_bot.urdf  piklet_robot.urdf  piklet_robot.urdf.xacro  piklet_robot.xacro  piklet_robot_macro.xacro  wheel.xacro
urdf/bot_sample1/: bot_sample1.urdf
urdf/bot_sample1/meshes/: base.dae
urdf/bot_sample1/urdf/: diff_drive.xacro  diff_drive_macro.xacro  diff_drive_with_lidar.xacro  diff_drive_with_lidar_control.xacro
urdf/diffdrive_bot/: diffdrive_bot.xacro  diffdrive_bot_macro.xacro
urdf/meshes/: arm.dae  gripper.dae
urdf/piklet_m1/: arm-3-dof.xacro  body.xacro  depth_camera.xacro  finger-2-gripper.xacro  gazebo.xacro  lidar.xacro  piklet_robot.urdf.xacro  piklet_ros2_control.xacro
